--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 Flask==2.3.2
 flask-cors==4.0.0
-scikit-learn==1.3.2
-pandas==2.1.2
+
+# Core scientific stack first
 numpy==1.26.4
+pandas==2.1.2
+scipy==1.11.4
+
+# ML
+scikit-learn==1.3.2
 joblib==1.3.2
+
+# Database
 SQLAlchemy==2.0.20
 flask_sqlalchemy==3.0.3
+
+# Optional (remove if not used in production)
 matplotlib==3.8.2
+
+# Server
 gunicorn==21.2.0
